docs: sync README to v10.3 — scriptless tuning
Pulls the current README from ver/1.21.11 onto main so the GitHub landing
page reflects v10.3: no tuner scripts, embedded recommended JVM flags,
dual JRE 21/25, updated Spark + SWM + wildstacker docs, StartupOptimizer
recommendation banner.